@@ -1,4 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
+15/08/2011
+- bugfix CacheResource would load content twice for KeyValueStore and Custom handlers
+
 06/08/2011
 - bugfix {include} with scope attribute could execute in wrong scope
 - optimization of compile_check processing
